--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Oswald:wght@300;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Kavoon&family=Oswald:wght@300;700&display=swap" rel="stylesheet">
+
   </head>
   <body
-    class="relative max-h-screen min-h-screen flex justify-center items-center bg-slate-500"
+    class="relative max-h-screen min-h-screen flex justify-center items-center bg-blue-400"
   >
     <div
       class="content min-h-[90vh] w-[90vw] text-white overflow-hidden relative"
@@ -146,7 +148,7 @@
                 building applications are JavaScript and PHP. In building
                 applications, I usually use a framework. Front-end frameworks
                 that I usually use are ReactJs and React Native and for Back-end
-                Frameworks I use are AdonisJS, Laravel, CodeIgniter 3.
+                Frameworks I use are AdonisJS and Laravel.
               </p>
             </div>
             <div
@@ -216,7 +218,7 @@
         class="bg-blue-700 min-h-[90vh] w-[90vw] flex flex-col relative rounded-xl shadow-xl p-5 space-y-2"
       >
         <div class="bg-blue-900 bg-opacity-70 shadow-xl p-3 rounded-xl">
-          <h1 class="font-extrabold subJudul text-2xl">Portfolio :</h1>
+          <h1 class="font-extrabold subJudul text-3xl">Portfolio :</h1>
           <hr class="my-1" />
         </div>
         <div
